--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #fdfdfd;
+  background-color: #f7f7f7;
   color: #222;
   margin: 0;
   padding: 0;
